--- a/Seau/package.json
+++ b/Seau/package.json
@@ -10,8 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^7.1.2",
     "axios": "^1.10.0",
     "dom": "^0.0.3",
+    "lucide-react": "^0.523.0",
+    "motion": "^12.19.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-kakao-maps-sdk": "^1.2.0",
@@ -29,6 +34,6 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
     "vite": "^6.3.5"
-  }
-  , "proxy":"http://localhost:3001"
+  },
+  "proxy": "http://localhost:3001"
 }
