--- a/Seau/package.json
+++ b/Seau/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^7.1.2",
     "axios": "^1.10.0",
     "dom": "^0.0.3",
+    "firebase": "^11.9.1",
     "lucide-react": "^0.523.0",
     "motion": "^12.19.1",
     "react": "^19.1.0",
